{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 420,
  "lineage": "11f9c341-25c9-cf09-06a4-2f701269b8ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "capital",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rm-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-090cbced13437190e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090cbced13437190e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed99e1addac4893c",
            "private_dns": "ip-10-42-1-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.10",
            "public_dns": "ec2-16-147-241-137.us-west-2.compute.amazonaws.com",
            "public_ip": "16.147.241.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a77a2e02a34229dc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "rm-1",
              "Role": "capital"
            },
            "tags_all": {
              "Name": "rm-1",
              "Role": "capital"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "rm-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0f6296872ad5f50bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6296872ad5f50bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e49cacb5ade8c194",
            "private_dns": "ip-10-42-1-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.11",
            "public_dns": "ec2-54-245-158-228.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.158.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04741d9a2c45c65d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "rm-2",
              "Role": "capital"
            },
            "tags_all": {
              "Name": "rm-2",
              "Role": "capital"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "rm-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0793469bd5db8fc4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0793469bd5db8fc4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c010b784643d1fd6",
            "private_dns": "ip-10-42-1-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.12",
            "public_dns": "ec2-44-246-143-177.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.143.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c45c13e2a33a1da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "rm-3",
              "Role": "capital"
            },
            "tags_all": {
              "Name": "rm-3",
              "Role": "capital"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "FuelDepot-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0691147c397328f16",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0691147c397328f16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ccf990097a3f0fb",
            "private_dns": "ip-10-42-1-53.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.53",
            "public_dns": "ec2-184-32-240-103.us-west-2.compute.amazonaws.com",
            "public_ip": "184.32.240.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db15b2b934e1f55f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "FuelDepot-1",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "FuelDepot-1",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "FuelDepot-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0e053af5ccf095764",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e053af5ccf095764",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b718350e1f09a11",
            "private_dns": "ip-10-42-1-63.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.63",
            "public_dns": "ec2-34-217-65-135.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.65.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ce905c0c3cee8a7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "FuelDepot-2",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "FuelDepot-2",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "FuelDepot-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-05098d77836df833a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05098d77836df833a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e11f74169a7fe28",
            "private_dns": "ip-10-42-1-73.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.73",
            "public_dns": "ec2-54-187-91-34.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.91.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07902ad4c452e0e32",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "FuelDepot-3",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "FuelDepot-3",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Hospital-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0ecf431eeb162900d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecf431eeb162900d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062e0c6676d464ad3",
            "private_dns": "ip-10-42-1-50.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.50",
            "public_dns": "ec2-52-26-25-213.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.25.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b7a83af27bed955",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Hospital-1",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Hospital-1",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Hospital-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0157cbeecb6dda713",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0157cbeecb6dda713",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032b64ce36f189140",
            "private_dns": "ip-10-42-1-60.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.60",
            "public_dns": "ec2-54-244-77-93.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.77.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd4f7c7c24aefb4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Hospital-2",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Hospital-2",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Hospital-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-02031c938f2a670c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02031c938f2a670c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a8f99fb3578677ac",
            "private_dns": "ip-10-42-1-70.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.70",
            "public_dns": "ec2-35-92-36-77.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.36.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ce50905031d71f6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Hospital-3",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Hospital-3",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Powerplant-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-050f8684d0b8f5bc1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050f8684d0b8f5bc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f0cee36ceff8446",
            "private_dns": "ip-10-42-1-51.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.51",
            "public_dns": "ec2-52-10-66-232.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.66.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d30f1903fca59158",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Powerplant-1",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Powerplant-1",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Powerplant-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0debea34761942111",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0debea34761942111",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0532bdad4ac18d546",
            "private_dns": "ip-10-42-1-61.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.61",
            "public_dns": "ec2-54-191-9-102.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.9.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b331ec2950cf48a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Powerplant-2",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Powerplant-2",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Powerplant-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0639c281df65b3a06",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0639c281df65b3a06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058b54e1c991b2b3f",
            "private_dns": "ip-10-42-1-71.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.71",
            "public_dns": "ec2-16-146-122-96.us-west-2.compute.amazonaws.com",
            "public_ip": "16.146.122.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b0c19562ad37817",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Powerplant-3",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "Powerplant-3",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "WaterTreatment-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-00f1c88d55e321e24",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f1c88d55e321e24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f147b0f7268b8d63",
            "private_dns": "ip-10-42-1-52.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.52",
            "public_dns": "ec2-52-39-120-106.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.120.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2b4bb9cd98c6c10",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "WaterTreatment-1",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "WaterTreatment-1",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "WaterTreatment-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0d8fcad5efc10e042",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8fcad5efc10e042",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3efa2800c1092eb",
            "private_dns": "ip-10-42-1-62.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.62",
            "public_dns": "ec2-54-186-238-124.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.238.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05049bc5f5cf12f0e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "WaterTreatment-2",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "WaterTreatment-2",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "WaterTreatment-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-028ee557c98d528b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028ee557c98d528b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0908df9b531bdce6a",
            "private_dns": "ip-10-42-1-72.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.72",
            "public_dns": "ec2-34-219-107-170.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.107.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02fa9fef226409d9b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "WaterTreatment-3",
              "Role": "infra"
            },
            "tags_all": {
              "Name": "WaterTreatment-3",
              "Role": "infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "regional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Airdrie-r1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0d2c3f95430f9a917",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2c3f95430f9a917",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065a53a986117e1c5",
            "private_dns": "ip-10-42-1-30.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.30",
            "public_dns": "ec2-16-148-137-74.us-west-2.compute.amazonaws.com",
            "public_ip": "16.148.137.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0011bb581cd237e47",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Airdrie-r1",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Airdrie-r1",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Airdrie-r2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0508e1b900ce08d41",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0508e1b900ce08d41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af27ca7edaa4efa1",
            "private_dns": "ip-10-42-1-31.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.31",
            "public_dns": "ec2-34-221-95-24.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.95.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03dd4550f7f6848f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Airdrie-r2",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Airdrie-r2",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Carstairs-r1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0a3ae29c999790cd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3ae29c999790cd4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fde7517784e5b21a",
            "private_dns": "ip-10-42-1-20.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.20",
            "public_dns": "ec2-52-10-111-10.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.111.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-073decaa81afadf25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Carstairs-r1",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Carstairs-r1",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Carstairs-r2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0716330913b2ec374",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0716330913b2ec374",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ccd20b095f34287a",
            "private_dns": "ip-10-42-1-21.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.21",
            "public_dns": "ec2-184-32-144-254.us-west-2.compute.amazonaws.com",
            "public_ip": "184.32.144.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-094a5ce1ebe89c131",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Carstairs-r2",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Carstairs-r2",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Cochrane-r1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-03376a1a3703cb103",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03376a1a3703cb103",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a41cbf8699c37039",
            "private_dns": "ip-10-42-1-40.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.40",
            "public_dns": "ec2-54-245-199-160.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.199.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-038fda3b6691c2500",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Cochrane-r1",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Cochrane-r1",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Cochrane-r2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:158210429599:instance/i-0d6e9f4d871467361",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6e9f4d871467361",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cpsc-559",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094c7ed88110be79c",
            "private_dns": "ip-10-42-1-41.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.41",
            "public_dns": "ec2-35-164-109-102.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.109.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b7a8f88c5b6776b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f73630434ea605a9",
            "tags": {
              "Name": "Cochrane-r2",
              "Role": "regional"
            },
            "tags_all": {
              "Name": "Cochrane-r2",
              "Role": "regional"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d301075fdc7ecd21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:158210429599:internet-gateway/igw-0ab370c3bdbb7c176",
            "id": "igw-0ab370c3bdbb7c176",
            "owner_id": "158210429599",
            "tags": {
              "Name": "distinfra-igw"
            },
            "tags_all": {
              "Name": "distinfra-igw"
            },
            "vpc_id": "vpc-02254ef664b20c39b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:158210429599:route-table/rtb-0d513c512e142689a",
            "id": "rtb-0d513c512e142689a",
            "owner_id": "158210429599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab370c3bdbb7c176",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "distinfra-public-rt"
            },
            "tags_all": {
              "Name": "distinfra-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02254ef664b20c39b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0984dc4de484c8612",
            "route_table_id": "rtb-0d513c512e142689a",
            "subnet_id": "subnet-0f73630434ea605a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.app",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:158210429599:security-group/sg-0d301075fdc7ecd21",
            "description": "Security group for capitals, regions, and hosted infra",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d301075fdc7ecd21",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.42.0.0/16"
                ],
                "description": "Intra-VPC application traffic",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4100
              },
              {
                "cidr_blocks": [
                  "50.99.196.71/32"
                ],
                "description": "Frontend access to capital websocket ports",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4003
              },
              {
                "cidr_blocks": [
                  "50.99.196.71/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "distinfra-cluster-sg",
            "name_prefix": "",
            "owner_id": "158210429599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "distinfra-cluster-sg"
            },
            "tags_all": {
              "Name": "distinfra-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02254ef664b20c39b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:158210429599:subnet/subnet-0f73630434ea605a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f73630434ea605a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "158210429599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "distinfra-app-subnet"
            },
            "tags_all": {
              "Name": "distinfra-app-subnet"
            },
            "vpc_id": "vpc-02254ef664b20c39b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:158210429599:vpc/vpc-02254ef664b20c39b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0e572973f1558484b",
            "default_route_table_id": "rtb-01c1ab545a6b60d6a",
            "default_security_group_id": "sg-0f586adcd1e84b05e",
            "dhcp_options_id": "dopt-036054726c78ebe6a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02254ef664b20c39b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c1ab545a6b60d6a",
            "owner_id": "158210429599",
            "tags": {
              "Name": "distinfra-vpc"
            },
            "tags_all": {
              "Name": "distinfra-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}